--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             android:exported="false" />
         <activity
             android:name=".CocktailActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:theme="@style/Theme.AndroidFinalProject.NoActionBar"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
